# vscode-auto-import

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
.github/workflows/: build.yml
daemon/: Cargo.toml
daemon/src/: main.rs  persistence.rs
daemon/src/index/: hot_index.rs  mod.rs  prefix_index.rs  string_table.rs  symbol.rs  symbol_index.rs
daemon/src/ipc/: mod.rs  protocol.rs  server.rs
daemon/src/parsers/: extractor.rs  java.rs  mod.rs  python.rs  python_fallback.rs  typescript.rs
daemon/src/workspace/: indexer.rs  library.rs  mod.rs  re_export_resolver.rs  scanner.rs  standard_library.rs
scripts/: build-daemon.js  gen-icon.js  verify-release.js
src/: config.ts  extension.ts  logger.ts
src/codeActions/: daemonQuickFixProvider.ts
src/completion/: autoImportEngine.ts  daemonProvider.ts  existingImports.ts  provider.ts  scorer.ts
src/completion/importInserter/: index.ts  java.ts  pyImportParser.ts  python.ts  tsImportParser.ts  tsModuleResolver.ts  typescript.ts
src/daemon/: client.ts
src/index/: hash.ts  hotIndex.ts  persistence.ts  prefixIndex.ts  stringTable.ts  symbolIndex.ts  trigramIndex.ts  types.ts
src/parsers/: base.ts  java.ts  python.ts  treeSitter.ts  typescript.ts
src/test/: mockVscode.ts  smokeCompletion.ts  smokeParsers.ts  smokePersistence.ts  smokeWorkspace.ts
src/test/e2e/: runTest.ts
src/test/e2e/suite/: extension.test.ts  index.ts
src/workspace/: reExportResolver.ts  scanner.ts  watcher.ts  workspaceIndexer.ts
