[package]
name = "autoimport-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "autoimport-daemon"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[dependencies]
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-java = "0.21"
tree-sitter-typescript = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "macros", "sync", "fs", "time"] }
rayon = "1"
walkdir = "2"
globset = "0.4"
regex = "1"
blake3 = "1"
anyhow = "1"
thiserror = "2"
crossbeam-channel = "0.5"
bincode = "1.3"
